# BotCommand

./: CLAUDE.md  FRONTEND_PLAN.md  README.md
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
backend/models/: README.md
backend/prisma/: schema.prisma
backend/src/osrs_backend/: __init__.py  cli.py  config.py  main.py
backend/src/osrs_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/osrs_backend/api/: __init__.py  app.py
backend/src/osrs_backend/api/routers/: __init__.py  action.py  healthcheck.py  item.py  task.py
backend/src/osrs_backend/db/: __init__.py  database.py
backend/src/osrs_backend/ml/: __init__.py  contract_loader.py  mlp_helper.py  policy.py  ppo.py  remote_processor.py  running_mean_std.py
backend/src/osrs_backend/models/: __init__.py  action.py  action_requirement.py  healthcheck.py  item.py  item_price.py
backend/src/osrs_backend/services/: __init__.py
backend/src/osrs_backend/tasks/: __init__.py  calculate_action_cost.py  fetch_backfill_prices.py  fetch_item_list.py  fetch_latest_prices.py
backend/src/osrs_backend/tcp/: __init__.py  protocol.py  server.py
backend/src/osrs_backend/utils/: __init__.py  logging.py  price_parser.py
backend/src/osrs_backend/workers/: __init__.py  arq_worker.py
docs/: JAD_ENVIRONMENT_PLAN.md  PROJECT_CONSOLIDATION_PLAN.md
pvp-ml/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TRAIN_OPTIONS.md  cluster.yml  environment.yml  setup.cfg  setup.py
pvp-ml/pvp_ml/: api.py  (+6 more)
(+638 files in other folders)
