[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osrs-backend"
version = "1.0.0"
description = "Unified OSRS backend - HTTP API and ML inference server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",

    # Database
    "prisma>=0.15.0",

    # Background jobs
    "arq>=0.26.3",
    "redis[hiredis]>=5.3.1",

    # ML inference
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "gymnasium>=0.29.0",
    "dacite>=1.8.0",

    # HTTP client
    "aiohttp>=3.9.0",
    "httpx>=0.28.0",

    # Data validation
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",

    # CLI
    "click>=8.3.0",

    # Utilities
    "python-dotenv>=1.2.0",

    # OSRS data
    "osrs>=0.0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
osrs = "osrs_backend.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
